--- a/web/modules/custom/student_enrollment/student_enrollment.routing.yml
+++ b/web/modules/custom/student_enrollment/student_enrollment.routing.yml
@@ -16,3 +16,11 @@ student_enrollment.enroll:
   options:
     parameters:
       course_id: \d+
+
+student_enrollment.dashboard:
+  path: '/student-dashboard'
+  defaults:
+    _title: 'Student Dashboard'
+    _controller: '\Drupal\student_enrollment\Controller\EnrollmentDashboardController::build'
+  requirements:
+    _permission: 'enroll for a course'
