--- a/config/default/system.date.yml
+++ b/config/default/system.date.yml
@@ -2,10 +2,10 @@ _core:
   default_config_hash: t7clj3mzmOGrXX0HuCH5usf0vEqRtnMTBFVBIEmZ5pc
 first_day: 0
 country:
-  default: ''
+  default: BG
 timezone:
-  default: UTC
+  default: Europe/Sofia
   user:
     configurable: true
-    default: 0
+    default: 2
     warn: false
