--- a/config/default/system.site.yml
+++ b/config/default/system.site.yml
@@ -3,7 +3,7 @@ _core:
 langcode: en
 uuid: 8b7febb0-0be0-4211-8cc5-7796755ae3c7
 name: 'Educational Content Management System'
-mail: admin@example.com
+mail: danails1307@abv.bg
 slogan: ''
 page:
   403: ''
