Email notifications for administrators

--- a/web/modules/custom/student_enrollment/student_enrollment.permissions.yml
+++ b/web/modules/custom/student_enrollment/student_enrollment.permissions.yml
@@ -6,3 +6,8 @@ view all student enrollments:
   title: 'View all student enrollments'
   description: 'Allows administrators to view and manage student enrollments.'
   restrict access: true
+access config form:
+  title: 'Access the email config form'
+  description: 'Allows access to a configuration form so the administrator
+can configure the list of emails that are going to be notified.'
+  restrict access: true
