--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "drupal/menu_per_role": "^1.5",
         "drupal/paragraphs": "^1.16",
         "drupal/profile": "^1.7",
+        "drupal/smtp": "^1.2",
         "drupal/symfony_mailer": "^1.4",
         "drupal/tab_manager": "^1.0",
         "drupal/tabtamer": "^2.0@beta",
